init
先ready的优先得到验证码